MarcoKitTests/TestData/error/object5.marco
--before
{a {b {c "d"}}

--after
14: '}' expected
